<resources>
    <string name="app_name">Bolly Filmes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detalhe_activity_label">Detalhe</string>
    <string name="settings_activity_label">Configurações</string>

    <string name="prefs_ordem_label">Ordem</string>
    <string name="prefs_ordem_key">ordem</string>

    <string-array name="prefs_ordem_values">
        <item>popular</item>
        <item>top_rated</item>
    </string-array>

    <string-array name="prefs_ordem_entries">
        <item>Populares</item>
        <item>Melhor avaliados</item>
    </string-array>

    <string name="prefs_idioma_label">Idioma</string>
    <string name="prefs_idioma_key">idioma</string>
    <string name="menu_atualizar_label">Atualizar</string>
    <string name="menu_configuracoes_label">Configurações</string>
    <string name="mensagem_carregando_titulo">Carregando...</string>
    <string name="mensagem_carregando">Por favor, aguarde.</string>

    <string-array name="prefs_idioma_values">
        <item>pt-BR</item>
        <item>en</item>
    </string-array>
    <string-array name="prefs_idioma_entries">
        <item>Português Brasileiro</item>
        <item>Inglês</item>
    </string-array>

    <!-- Account Manager -->
    <string name="sync_account_type">bollyfilmes.apptize.me</string>
    <string name="content_authority">me.apptize.bollyfilmes</string>
    <string name="pref_notifications_label">Notificação</string>
    <string name="pref_notification_key">notifications</string>
    <string name="value_notification_off">Desabilitado</string>
    <string name="value_notification_on">Habilitado</string>
    <string name="value_notification_default">true</string>


</resources>
